fake: Remove fake crate
Signed-off-by: Liu Jiang <gerry@linux.alibaba.com>

Signed-off-by: haowei <WeiX.Hao@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
 [workspace]
 resolver = "2"
-default-members = ["fake"]
+default-members = []
 members = [
-	"fake",
 	"devtools/td-layout-config",
 	"devtools/test-runner-client",
 	"devtools/test-runner-server",
