td-layout: Refine TdxMetadata
TdxMetadata is refined with below changes:
1. TdxMetadataGuid is defined with td_uefi_pi::pi::guid::Guid.
2. Add from_bytes/is_valid functions in TdxMetadata/TdxMetadataSection.
3. Add TdxMetadata related constants.

Signed-off-by: Min Xu <min.m.xu@intel.com>

--- a/td-layout/Cargo.toml
+++ b/td-layout/Cargo.toml
@@ -13,6 +13,7 @@ boot-kernel = []
 [dependencies]
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
 log = "0.4.13"
+td-uefi-pi =  { path = "../td-uefi-pi" }
 
 [dev-dependencies]
 memoffset = "0.6"
