td-shim-tools: Add loader and td-shim-checker
This patch corresponds to issue #81 which tries to resolve:
- Parse td-shim binary to find out the TdxMetadata
- Validate TdxMeatadata information and ensure it follows the td-shim
  spec.

So we create one library and one tool.
- Create a td-shim-loader library, that could be reused by the VMM.
  This library exports below function:
  TdShimLoader::parse(filename: &String) ->
  Option<(TdxMetadataDescriptor, Vec<TdxMetadataSection>)>

- Create a td-shim-checker tool (consuming td-shim-loader) to validate
  the format of the final binary.
  cargo run -p td-shim-tools --bin td-shim-checker --no-default-features
  --features="loader" -- target/x86_64-unknown-uefi/release/final-pe.bi

Signed-off-by: Min Xu <min.m.xu@intel.com>

--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -19,6 +19,10 @@ required-features = ["linker"]
 name = "td-shim-sign-payload"
 required-features = ["signer"]
 
+[[bin]]
+name = "td-shim-checker"
+required-features = ["loader"]
+
 [dependencies]
 r-efi = "3.2.0"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
@@ -34,8 +38,9 @@ td-loader = { path = "../td-loader", optional = true }
 ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
 
 [features]
-default = ["boot-kernel", "enroller", "linker", "signer"]
+default = ["boot-kernel", "enroller", "linker", "signer", "loader"]
 boot-kernel = ["td-layout/boot-kernel", "td-shim/boot-kernel"]
 enroller = ["clap", "der", "env_logger", "log", "ring"]
 linker = ["clap", "env_logger", "log", "td-loader"]
 signer = ["clap", "der", "env_logger", "log", "ring"]
+loader = ["clap", "env_logger", "log"]
