Update rust toolchain version to nightly-2022-04-07
Changes:
    - global_asm and asm macro are already stable features and can be used
      by import core::arch::global_asm and core::arch::asm
    - Update crate x86, x86_64, bootloader and uart to latest version.
    - Add #![feature(asm_sym)] to resolve compilation error.
    - Update rust toolchain version used by CI.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/tests/test-td-paging/Cargo.toml
+++ b/tests/test-td-paging/Cargo.toml
@@ -9,13 +9,13 @@ edition = "2018"
 
 [dependencies]
 # Keep it as `dependencies` to satisfy bootloader-locator's requirement, though it should be `dev-dependencies`
-bootloader = "=0.10.9"
+bootloader = "0.10.12"
 
 [dev-dependencies]
 td-paging = { path = "../../td-paging" }
 td-layout = { path = "../../td-layout" }
 test-runner-client = { path = "../../devtools/test-runner-client" }
-x86_64 = "=0.14.6"
+x86_64 = "0.14.9"
 
 [package.metadata.bootloader]
 map-physical-memory = true
