--- a/devtools/test-runner-client/Cargo.toml
+++ b/devtools/test-runner-client/Cargo.toml
@@ -10,5 +10,5 @@ edition = "2018"
 [dependencies]
 linked_list_allocator = "0.9.0"
 spin = { version = "0.9.2", features = ["lazy"]}
-uart_16550 = "=0.2.14"
-x86_64 = "=0.14.6"
+uart_16550 = "0.2.17"
+x86_64 = "0.14.9"
