--- a/.github/workflows/devtools.yml
+++ b/.github/workflows/devtools.yml
@@ -10,6 +10,9 @@ on:
 name: Devtools
 
 env:
+  AS: nasm
+  AR_x86_64_unknown_uefi: llvm-ar
+  CC_x86_64_unknown_uefi: clang
   STABLE_RUST_TOOLCHAIN: 1.58.1
   NIGHTLY_RUST_TOOLCHAIN: nightly-2022-04-07
   TOOLCHAIN_PROFILE: minimal
@@ -32,21 +35,24 @@ jobs:
           version: "10.0"
           directory: ${{ runner.temp }}/llvm
 
+      - name: install NASM
+        uses: ilammy/setup-nasm@v1
+
       - name: Checkout sources
         uses: actions/checkout@v2
-
-      - name: Install nightly toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: ${{ env.TOOLCHAIN_PROFILE }}
-          toolchain: ${{ env.NIGHTLY_RUST_TOOLCHAIN }}
-          override: true
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: ${{ env.TOOLCHAIN_PROFILE }}
           toolchain: ${{ env.STABLE_RUST_TOOLCHAIN }}
+          override: true
+
+      - name: Install nightly toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: ${{ env.TOOLCHAIN_PROFILE }}
+          toolchain: ${{ env.NIGHTLY_RUST_TOOLCHAIN }}
           override: true
 
       - name: Cache
