Reproducible build: introduce a tool to help reproducible build
1. Introduce a reproducible tool, td-reproducible-tool, to help reproducible
2. Add strip = "symbols" to cargo.toml in root workspace to remove symbols

Signed-off-by: Longlong Yang <longlong.yang@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "td-shim",
     "td-shim-tools",
     "tdx-tdcall",
+    "td-reproducible-tool",
     "tests/test-td-exception",
     "tests/test-td-paging",
     "tests/test-td-payload",
@@ -27,3 +28,4 @@ panic = "abort" # disable stack unwinding on panic
 [profile.release]
 panic = "abort"    # disable stack unwinding on panic
 lto = true         # Link-time optimization
+strip = "symbols"  # remove debug related symbols/sections
