--- a/td-logger/Cargo.toml
+++ b/td-logger/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 
 [dependencies]
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
-log = "0.4.13"
+log = { version = "0.4.13", features = ["max_level_info", "release_max_level_info"] }
 spin = "0.9.2"
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
 # Lock down to 0.44, otherwise it depends on inline asm
