--- a/td-exception/Cargo.toml
+++ b/td-exception/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = { version = "1.0", features = ["spin_no_std"] }
 log = "0.4.13"
 tdx-tdcall =  { path = "../tdx-tdcall", optional = true }
 x86_64 = "0.14.9"
+spin = "0.9.2"
 
 [features]
 tdx = ["tdx-tdcall"]
