Fix unit test cases
1. Fix unit test case in td-shim/src/e820.rs
2. Fix unit test case in td-shim-tools/src/enroller.rs
3. Fix unit test case in td-layout/sec/metadata.rs
4. Add test in CI for SHIM_CRATES

Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,9 @@ jobs:
         with:
           command: install
           args: cargo-xbuild
+      
+      - name: Test Shim Crates
+        run: make test 
 
       - name: Build TdShim
         uses: actions-rs/cargo@v1
@@ -110,6 +113,7 @@ jobs:
       - name: Install QEMU (Linux)
         run: sudo apt update && sudo apt install qemu-system-x86
         if: runner.os == 'Linux'
+
       - name: Install QEMU (Windows)
         run: |
           choco install qemu --version 2021.5.5
