Move td-reproducible-tool to td-shim-tool directory
Fix #289

Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -23,8 +23,14 @@ required-features = ["signer"]
 name = "td-shim-checker"
 required-features = ["loader"]
 
+[[bin]]
+name = "td-shim-strip-info"
+
 [dependencies]
 r-efi = "3.2.0"
+argparse = "0.2.2"
+zeroize = "1.5.4"
+regex = "1"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
 td-layout = { path = "../td-layout" }
 td-shim = { path = "../td-shim", default-features = false }
