--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -26,6 +26,10 @@ required-features = ["loader"]
 [[bin]]
 name = "td-shim-strip-info"
 
+[[bin]]
+name = "td-shim-tee-info-hash"
+required-features = ["tee"]
+
 [dependencies]
 r-efi = "3.2.0"
 argparse = "0.2.2"
@@ -42,11 +46,17 @@ env_logger = { version = "0.9.0", optional = true }
 log = { version = "0.4.5", optional = true }
 td-loader = { path = "../td-loader", optional = true }
 ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
+serde_json = { version = "1.0", optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
+hex = { version = "0.4", features = ["serde"], optional = true }
+sha2 = { version = "0.10.2", optional = true }
+byteorder = { version = "1.4.3", optional = true }
 
 [features]
-default = ["boot-kernel", "enroller", "linker", "signer", "loader"]
+default = ["boot-kernel", "enroller", "linker", "signer", "loader", "tee"]
 boot-kernel = ["td-layout/boot-kernel", "td-shim/boot-kernel"]
 enroller = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
 linker = ["clap", "env_logger", "log", "td-loader"]
 signer = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
 loader = ["clap", "env_logger", "log"]
+tee = ["clap", "env_logger", "log", "serde_json", "serde", "hex", "sha2", "byteorder"]
