--- a/devtools/td-layout-config/config.json
+++ b/devtools/td-layout-config/config.json
@@ -70,6 +70,8 @@
         "event_log_size": 0x100000,
         "mailbox_size": 0x2000,
         "acpi_size": 0x100000,
+        "unaccepted_memory_bitmap_size": 0x40000,
+        "partial_accept_memory_size": 0x10000000,
         "payload_hob_size": 0x400000,
         "shadow_stack_size": 0x200000,
         "stack_size": 0x800000,
