td-shim: move secure boot verification out from 'bin'
The secure boot uses untrusted input such as payload sign header and CFV,
it needs to be tested with fuzz.

It is hard to call the functions inside executable crate, so we move the
secure boot image verification functions to the outside.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -48,7 +48,7 @@ tdx-tdcall = { path = "../tdx-tdcall", optional = true }
 default = ["boot-kernel", "cet-ss", "secure-boot"]
 boot-kernel = ["td-layout/boot-kernel"]
 cet-ss = []
-secure-boot = ["der"]
+secure-boot = ["der", "ring"]
 tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
 main = [
     "td-loader",
