--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -46,7 +46,7 @@ ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", def
 [features]
 default = ["boot-kernel", "enroller", "linker", "signer", "loader"]
 boot-kernel = ["td-layout/boot-kernel", "td-shim/boot-kernel"]
-enroller = ["clap", "der", "env_logger", "log", "ring"]
+enroller = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
 linker = ["clap", "env_logger", "log", "td-loader"]
-signer = ["clap", "der", "env_logger", "log", "ring"]
+signer = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
 loader = ["clap", "env_logger", "log"]
