td-shim: introduce lazy-accept to improve boot performance
Lazy-accept means only part of the unaccepted memory is accepted by the
td-shim, and the rest is handled by the OS kernel.

Since td-shim does not provide UEFI interface for OS to obtain the memory
map, it should build a bitmap to mark whether a 2MB page has been accepted
or not, and pass the bitmap address to OS, e.g., the boot parameter
(offset 0x78) for Linux Kernel.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -50,6 +50,7 @@ boot-kernel = ["td-layout/boot-kernel"]
 cet-ss = []
 secure-boot = ["der"]
 tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
+lazy-accept = ["tdx"]
 main = [
     "td-loader",
     "linked_list_allocator",
