Update fuzzing test scripts
Support single run afl/libfuzzer test case
Support run all afl/libfuzzer test cases
Support code coverage generation
Support timing control
Update fuzzing.md

Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,5 +141,5 @@ jobs:
         if: runner.os == 'Linux'
       
       - name: Build all fuzzing test case (Linux)
-        run: bash sh_script/fuzzing.sh build
+        run: bash sh_script/fuzzing.sh -b
         if: runner.os == 'Linux'
