--- a/devtools/td-layout-config/config.json
+++ b/devtools/td-layout-config/config.json
@@ -45,13 +45,11 @@
                 |     Legacy   |
                 +--------------+ <-  0x00100000 (1M)
                 |   ........   |
-                +--------------+ <-  page_table_base - 0x00800000
-                |  Page Table  |
-                +--------------+ <-  td_hob_base - 0x01000000 (128K)
+                +--------------+ <-  td_hob_base - 0x800000 (128K)
                 |    TD_HOB    |
-                +--------------+ <-  payload_param_base - 0x01100000 (1M)
+                +--------------+ <-  payload_param_base - 0x900000 (1M)
                 | PAYLOAD_PARAM|     (payload_param_size)
-                +--------------+ <-  payload_base - 0x01200000 (32M)
+                +--------------+ <-  payload_base - 0xA00000 (32M)
                 |    PAYLOAD   |     (payload_size)
                 +--------------+
                 |   ........   |
@@ -63,12 +61,15 @@
                 |  PAYLOAD_HOB |     (payload_hob_size)
                 +--------------+ <-  event_log_base - 0x7FEF0000 (1M)
                 |     ACPI     |     (ACPI)
+                +--------------+ <-  page_table_base - 0x00800000
+                |  Page Table  |
                 +--------------+ <-  acpi_base - 0x7FF00000 (1M)
                 | TD_EVENT_LOG |     (event_log_size)
                 +--------------+ <-  0x80000000 (2G) - for example
         */
         "event_log_size": 0x100000,
         "mailbox_size": 0x2000,
+        "page_table_size": 0x20000,
         "acpi_size": 0x100000,
         "unaccepted_memory_bitmap_size": 0x40000,
         "partial_accept_memory_size": 0x10000000,
@@ -77,9 +78,8 @@
         "stack_size": 0x800000,
         "payload_size": 0x8000000,
         "payload_param_size": 0x100000,
-        "payload_param_base": 0x01100000,
+        "payload_param_base": 0x0900000,
         "td_hob_size": 0x20000,
-        "page_table_size": 0x20000,
-        "page_table_base": 0x800000,
+        "td_hob_base": 0x800000,
     }
 }
