remove shadow stack support
TD Shim builds a temporary for payload and paylaod would never return
back. It is payload's responsibility to setup control flow protections
such as shadow stack.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -45,9 +45,8 @@ der = {version = "0.4.5", features = ["derive", "alloc"], optional = true}
 tdx-tdcall = { path = "../tdx-tdcall", optional = true }
 
 [features]
-default = ["boot-kernel", "cet-ss", "secure-boot"]
+default = ["boot-kernel", "secure-boot"]
 boot-kernel = ["td-layout/boot-kernel"]
-cet-ss = []
 secure-boot = ["der", "ring"]
 tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
 lazy-accept = ["tdx"]
