--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ env:
   AS: nasm
   AR_x86_64_unknown_uefi: llvm-ar
   CC_x86_64_unknown_uefi: clang
+  AR_x86_64_unknown_none: llvm-ar
+  CC_x86_64_unknown_none: clang
   RUST_TOOLCHAIN: nightly-2022-05-15
   TOOLCHAIN_PROFILE: minimal
 
