--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -13,7 +13,7 @@ required-features = ["main"]
 
 [build-dependencies]
 anyhow = "1.0.55"
-cc = { git = "https://github.com/jyao1/cc-rs.git", branch = "uefi_support" }
+cc = "1.0"
 td-layout = { path = "../td-layout" }
 tdx-tdcall = { path = "../tdx-tdcall" }
 which = "4.2.4"
@@ -29,7 +29,7 @@ zerocopy = "0.6.0"
 
 td-loader = { path = "../td-loader", optional = true }
 linked_list_allocator = { version = "0.9.0", optional = true }
-ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
+ring = { path = "../library/ring", default-features = false, features = ["alloc"], optional = true }
 spin = { version = "0.9.2", optional = true }
 td-exception =  { path = "../td-exception", features = ["tdx"], optional = true }
 td-logger =  { path = "../td-logger", optional = true }
