--- a/.github/workflows/devtools.yml
+++ b/.github/workflows/devtools.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Checkout sources
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -57,6 +59,9 @@ jobs:
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
+
+      - name: Preparation work
+        run: make preparation
 
       - name: Install devtools
         run: make install-devtools
