move `event_log` out to `cc-measurement` crate
 - Move generic TCG definitions out to the `tcg` crate.
 - Keep TD-Shim related event log definitions in the `td-shim/event_log`.
 - Move the `CCEL` ACPI table definition to `td-shim/acpi`.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 default-members = ["td-shim", "td-payload"]
 members = [
+    "cc-measurement",
     "devtools/td-layout-config",
     "devtools/td-benchmark",
     "devtools/test-runner-server",
