--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -25,6 +25,7 @@ r-efi = "3.2.0"
 scroll = { version = "0.10", default-features = false, features = ["derive"] }
 td-layout = { path = "../td-layout" }
 td-uefi-pi =  { path = "../td-uefi-pi" }
+cc-measurement = { path = "../cc-measurement" }
 zerocopy = "0.6.0"
 
 td-loader = { path = "../td-loader", optional = true }
