Add fuzzing test in CI
Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,6 +152,8 @@ jobs:
       - name: Preparation work
         run: bash sh_script/preparation.sh
 
-      - name: Build all fuzzing test case (Linux)
-        run: bash sh_script/fuzzing.sh -b
-        if: runner.os == 'Linux'
+      - name: Run all afl fuzzing test cases (Linux)
+        run: bash sh_script/fuzzing.sh -n afl_all -t 10
+
+      - name: Run all libfuzzer fuzzing test cases (Linux)
+        run: bash sh_script/fuzzing.sh -n libfuzzer_all -t 20
