--- a/td-loader/fuzz/Cargo.toml
+++ b/td-loader/fuzz/Cargo.toml
@@ -12,6 +12,7 @@ cargo-fuzz = true
 libfuzzer-sys = {version = "0.4", optional = true }
 afl = {version = "*", optional = true }
 log = "0.4.13"
+arbitrary = "=1.1.3"
 
 [dependencies.td-loader]
 path = ".."
