--- a/td-uefi-pi/fuzz/Cargo.toml
+++ b/td-uefi-pi/fuzz/Cargo.toml
@@ -13,6 +13,7 @@ cargo-fuzz = true
 libfuzzer-sys = {version = "0.4", optional = true }
 afl = {version = "*", optional = true }
 r-efi = "3.2.0"
+arbitrary = "=1.1.3"
 
 [dependencies.td-uefi-pi]
 path = ".."
