update README and CI about td-shim target change
Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,7 +69,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/x86_64-unknown-uefi/release/final-pe.bin
+          asset_path: target/release/final-pe.bin
           asset_name: final-pe.bin
           asset_content_type: application/octet-stream
 
@@ -80,7 +80,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/x86_64-unknown-uefi/release/final-pe-boot-kernel.bin
+          asset_path: target/release/final-pe-boot-kernel.bin
           asset_name: final-pe-boot-kernel.bin
           asset_content_type: application/octet-stream
 
@@ -91,6 +91,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/x86_64-unknown-uefi/release/final-elf.bin
+          asset_path: target/release/final-elf.bin
           asset_name: final-elf.bin
           asset_content_type: application/octet-stream
