--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,25 +72,25 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: xbuild
-          args: -p td-shim --target x86_64-unknown-uefi --release --features=main,tdx
+          args: -p td-shim --target x86_64-unknown-none --release --features=main,tdx
 
       - name: Build image without payload
         run: |
-          cargo run -p td-shim-tools --features=td-shim/default --bin td-shim-ld -- target/x86_64-unknown-uefi/release/ResetVector.bin target/x86_64-unknown-uefi/release/td-shim.efi -o target/x86_64-unknown-uefi/release/final.bin
+          cargo run -p td-shim-tools --features=td-shim/default --bin td-shim-ld -- target/x86_64-unknown-none/release/ResetVector.bin target/x86_64-unknown-none/release/td-shim -o target/release/final.bin
       
       - name: Meta data check
         run: |
-          cargo run -p td-shim-tools --bin td-shim-checker -- target/x86_64-unknown-uefi/release/final.bin
+          cargo run -p td-shim-tools --bin td-shim-checker -- target/release/final.bin
 
       - name: Build PE format payload
         run: |
-          cargo xbuild -p td-payload --target x86_64-unknown-uefi --release --features=main,tdx
-          cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-uefi/release/ResetVector.bin target/x86_64-unknown-uefi/release/td-shim.efi -p target/x86_64-unknown-uefi/release/td-payload.efi -o target/x86_64-unknown-uefi/release/final-pe.bin
+          cargo xbuild -p td-payload --target x86_64-unknown-none --release --features=main,tdx
+          cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-none/release/ResetVector.bin target/x86_64-unknown-none/release/td-shim -p target/x86_64-unknown-uefi/release/td-payload.efi -o target/release/final-pe.bin
 
       - name: Build Elf format payload
         run: |
-          cargo xbuild -p td-payload --target devtools/rustc-targets/x86_64-unknown-none.json --release --features=main,tdx
-          cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-uefi/release/ResetVector.bin target/x86_64-unknown-uefi/release/td-shim.efi -p target/x86_64-unknown-none/release/td-payload -o target/x86_64-unknown-uefi/release/final-elf.bin
+          cargo xbuild -p td-payload --target x86_64-unknown-none --release --features=main,tdx
+          cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-none/release/ResetVector.bin target/x86_64-unknown-none/release/td-shim -p target/x86_64-unknown-none/release/td-payload -o target/release/final-elf.bin
 
   test:
     name: Test
