td-shim: add a feature to support optional payload relocation
Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -51,6 +51,7 @@ boot-kernel = ["td-layout/boot-kernel"]
 secure-boot = ["der", "ring"]
 tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
 lazy-accept = ["tdx"]
+disable-relocation = ["td-loader/disable-relocation"]
 main = [
     "td-loader",
     "linked_list_allocator",
