--- a/td-loader/Cargo.toml
+++ b/td-loader/Cargo.toml
@@ -15,3 +15,7 @@ scroll = { version = "0.10", default-features=false, features = ["derive"] }
 
 [dev-dependencies]
 env_logger = "0.9.0"
+
+[features]
+default = []
+disable-relocation = []
