--- a/.github/workflows/deny.yml
+++ b/.github/workflows/deny.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         checks:
-          # - advisories
+          - advisories
           - sources
           - bans
 
