--- a/td-shim/Cargo.toml
+++ b/td-shim/Cargo.toml
@@ -51,10 +51,11 @@ boot-kernel = ["td-layout/boot-kernel"]
 secure-boot = ["der", "ring"]
 tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
 lazy-accept = ["tdx"]
+ring-hash = ["cc-measurement/ring"]
+sha2-hash = ["cc-measurement/sha2"]
 main = [
     "td-loader",
     "linked_list_allocator",
-    "ring",
     "spin",
     "td-exception",
     "td-logger",
