Update CI tasks to contain more tests
1. Add crate td-loader and cc-measurement in lib crate list
2. Define afl-test and libfuzzer-test in Makefile

Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,7 +153,7 @@ jobs:
         run: bash sh_script/preparation.sh
 
       - name: Run all afl fuzzing test cases (Linux)
-        run: bash sh_script/fuzzing.sh -n afl_all -t 10
+        run: make afl-test
 
       - name: Run all libfuzzer fuzzing test cases (Linux)
-        run: bash sh_script/fuzzing.sh -n libfuzzer_all -t 20
+        run: make libfuzzer-test
