--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ members = [
 # the profile used for `cargo build`
 [profile.dev]
 panic = "abort" # disable stack unwinding on panic
+opt-level = "z"
+lto = true
 
 # the profile used for `cargo build --release`
 [profile.release]
