upadte CI and readme
After `lto` and size optimization are enabled, we need to set `CC` and
`AR` for `td-shim-tools` and `clippy` tool to compile crate `ring`.

`signer` and `enroller` are default features which depend on `ring` so
we can disable the default features when running `td-shim-ld`

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -4,8 +4,8 @@ name: Format and Clippy
 
 env:
   AS: nasm
-  AR_x86_64_unknown_uefi: llvm-ar
-  CC_x86_64_unknown_uefi: clang
+  AR: llvm-ar
+  CC: clang
 
 jobs:
   clippy:
