Add debug build in main.yml
Signed-off-by: Wei Liu <wei3.liu@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,11 +68,17 @@ jobs:
       - name: Test Shim Crates
         run: make test 
 
-      - name: Build TdShim
+      - name: Build Release TdShim
         uses: actions-rs/cargo@v1
         with:
           command: xbuild
           args: -p td-shim --target x86_64-unknown-none --release --features=main,tdx
+      
+      - name: Build Debug TdShim
+        uses: actions-rs/cargo@v1
+        with:
+          command: xbuild
+          args: -p td-shim --target x86_64-unknown-none --release --features=main,tdx --no-default-features
 
       - name: Build image without payload
         run: |
@@ -82,15 +88,25 @@ jobs:
         run: |
           cargo run -p td-shim-tools --bin td-shim-checker  --no-default-features --features=loader -- target/release/final.bin
 
-      - name: Build PE format payload
+      - name: Build Release PE format payload
         run: |
           cargo xbuild -p td-payload --target x86_64-unknown-uefi --release --features=main,tdx
           cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-none/release/ResetVector.bin target/x86_64-unknown-none/release/td-shim -p target/x86_64-unknown-uefi/release/td-payload.efi -o target/release/final-pe.bin
+      
+      - name: Build Debug PE format payload
+        run: |
+          cargo xbuild -p td-payload --target x86_64-unknown-uefi --features=main,tdx
+          cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-none/debug/ResetVector.bin target/x86_64-unknown-none/debug/td-shim -p target/x86_64-unknown-uefi/debug/td-payload.efi -o target/debug/final-pe.bin
 
-      - name: Build Elf format payload
+      - name: Build Release Elf format payload
         run: |
           cargo xbuild -p td-payload --target x86_64-unknown-none --release --features=main,tdx
           cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-none/release/ResetVector.bin target/x86_64-unknown-none/release/td-shim -p target/x86_64-unknown-none/release/td-payload -o target/release/final-elf.bin
+
+      - name: Build Debug Elf format payload
+        run: |
+          cargo xbuild -p td-payload --target x86_64-unknown-none --features=main,tdx
+          cargo run -p td-shim-tools --no-default-features --features=linker --bin td-shim-ld -- target/x86_64-unknown-none/debug/ResetVector.bin target/x86_64-unknown-none/debug/td-shim -p target/x86_64-unknown-none/debug/td-payload -o target/debug/final-elf.bin
 
   test:
     name: Test
