--- a/devtools/td-benchmark/Cargo.toml
+++ b/devtools/td-benchmark/Cargo.toml
@@ -13,3 +13,9 @@ log = "0.4.13"
 scroll = { version = "0.10", default-features = false, features = ["derive"]}
 td-layout = { path = "../../td-layout" }
 x86 = "0.47.0"
+
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+spin = "0.9.2"
+
+[dev-dependencies]
+alloca = "0.3.3"
