--- a/devtools/td-layout-config/config.json
+++ b/devtools/td-layout-config/config.json
@@ -69,6 +69,7 @@
         */
         "event_log_size": 0x100000,
         "mailbox_size": 0x2000,
+        "idt_size": 0x2000,
         "page_table_size": 0x20000,
         "acpi_size": 0x100000,
         "unaccepted_memory_bitmap_size": 0x40000,
