td-shim-tools: add option for separated executable payload section
When the feature `exec-payload-section` is enabled, put the payload fv into
the payload section, otherwise put it inside the BFV.

Signed-off-by: Jiaqi Gao <jiaqi.gao@intel.com>

--- a/td-shim-tools/Cargo.toml
+++ b/td-shim-tools/Cargo.toml
@@ -76,3 +76,4 @@ loader = ["clap", "env_logger", "log"]
 tee = ["clap", "env_logger", "log", "serde_json", "serde", "hex", "sha2", "byteorder"]
 layout_builder = ["clap", "env_logger", "log", "clap/derive", "serde", "serde_json", "tera", "json5"]
 calculator = ["clap", "hex", "parse_int", "sha2", "anyhow", "block-padding"]
+exec-payload-section = []
